--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             class="grid sm:grid-cols-2 grid-cols-[30%_auto] px-[20px] items-center"
           >
             <figure>
-              <img src="images/logo.png " class="w-[148px] size-[50px]" />
+              <img src="images/logo.png " class="w-[148px] size-[70px]" />
             </figure>
             <div class="flex justify-end gap-[10px]">
               <div class="relative">
@@ -65,12 +65,9 @@
             shows and more
           </h1>
           <h4 class="text-[20px] ty-[30px] pb-[25px]">
-            Starts at ₹149. Cancel anytime.
+            Starts at ₹99. Cancel anytime.
           </h4>
-          <p class="text-[17px]">
-            Ready to watch? Enter your email to create or restart your
-            membership.
-          </p>
+
           <div class="max-w-[700px] sm:px-10px px-[40px] mx-auto mt-[15px]">
             <form
               action=""
@@ -91,29 +88,6 @@
         </div>
       </div>
     </section>
-
-    <section
-      class="w-[100%] border-t-[8px] border-t-[#605d5d] bg-slate-800 sm:py-[100px] py-[50px]"
-    >
-      <div class="max-w-[1170px] mx-auto px-[15px]">
-        <div class="grid sm:grid-cols-2 grid-cols-1 items-center">
-          <div class="text-white">
-            <h2 class="sm:text-[45px] text-[35px] font-bold">
-              Enjoy on your TV
-            </h2>
-            <p class="sm:text-[25px] text-[20px] pt-[30px]">
-              Watch on smart TVs, PlayStation, Xbox, Chromecast,
-              <br />
-              Apple TV, Blu-ray players and more.
-            </p>
-          </div>
-          <figure>
-            <img src="images/feature-1.png" />
-          </figure>
-        </div>
-      </div>
-    </section>
-
     <section
       class="w-[100%] border-t-[8px] border-t-[#605d5d] bg-slate-800 sm:py-[100px] py-[50px]"
     >
@@ -134,7 +108,6 @@
         </div>
       </div>
     </section>
-
     <section
       class="w-[100%] border-t-[8px] border-t-[#605d5d] bg-slate-800 sm:py-[100px] py-[50px]"
     >
@@ -151,6 +124,27 @@
           </div>
           <figure class="py-[10px]">
             <img src="images/feature-3.png" />
+          </figure>
+        </div>
+      </div>
+    </section>
+    <section
+      class="w-[100%] border-t-[8px] border-t-[#605d5d] bg-slate-800 sm:py-[100px] py-[50px]"
+    >
+      <div class="max-w-[1170px] mx-auto px-[15px]">
+        <div class="grid sm:grid-cols-2 grid-cols-1 items-center">
+          <div class="text-white">
+            <h2 class="sm:text-[45px] text-[35px] font-bold">
+              Enjoy on your TV
+            </h2>
+            <p class="sm:text-[25px] text-[20px] pt-[30px]">
+              Watch on smart TVs, PlayStation, Xbox, Chromecast,
+              <br />
+              Apple TV, Blu-ray players and more.
+            </p>
+          </div>
+          <figure>
+            <img src="images/feature-1.png" />
           </figure>
         </div>
       </div>
@@ -214,24 +208,6 @@
             <div
               class="p-[20px] text-white sm:text-[30px] text-[20px] relative border-b-[2px] border-[black] hover:bg-[rgb(78,78,78)] duration-300 cursor-pointer faqQuestion"
             >
-              <h3>How much does Netflix cost?</h3>
-              <span class="absolute right-[20px] top-[15px]">+</span>
-            </div>
-            <div
-              class="text-white sm:text-[25px] text-[20px] scale-y-0 h-[0px] origin-top duration-300"
-            >
-              <p>
-                Watch Netflix on your smartphone, tablet, Smart TV, laptop, or
-                streaming device, all for one fixed monthly fee. Plans range
-                from ₹649 to ₹149 a month. No extra costs, no contracts.
-              </p>
-            </div>
-          </div>
-
-          <div class="bg-[#2d2d0d] mb-[15px]">
-            <div
-              class="p-[20px] text-white sm:text-[30px] text-[20px] relative border-b-[2px] border-[black] hover:bg-[rgb(78,78,78)] duration-300 cursor-pointer faqQuestion"
-            >
               <h3>Where can I Watch?</h3>
               <span class="absolute right-[20px] top-[15px]">+</span>
             </div>
@@ -251,6 +227,41 @@
                 Android, or Windows 10 app. Use downloads to watch while you're
                 on the go and without an internet connection. Take Netflix with
                 you anywhere.
+              </p>
+            </div>
+          </div>
+          <div class="bg-[#2d2d0d] mb-[15px]">
+            <div
+              class="p-[20px] text-white sm:text-[30px] text-[20px] relative border-b-[2px] border-[black] hover:bg-[rgb(78,78,78)] duration-300 cursor-pointer faqQuestion"
+            >
+              <h3>How much does Netflix cost?</h3>
+              <span class="absolute right-[20px] top-[15px]">+</span>
+            </div>
+            <div
+              class="text-white sm:text-[25px] text-[20px] scale-y-0 h-[0px] origin-top duration-300"
+            >
+              <p>
+                Watch Netflix on your smartphone, tablet, Smart TV, laptop, or
+                streaming device, all for one fixed monthly fee. Plans range
+                from ₹649 to ₹149 a month. No extra costs, no contracts.
+              </p>
+            </div>
+          </div>
+
+          <div class="bg-[#2d2d0d] mb-[15px]">
+            <div
+              class="p-[20px] text-white sm:text-[30px] text-[20px] relative border-b-[2px] border-[black] hover:bg-[rgb(78,78,78)] duration-300 cursor-pointer faqQuestion"
+            >
+              <h3>What can I watch on Netflix?</h3>
+              <span class="absolute right-[20px] top-[15px]">+</span>
+            </div>
+            <div
+              class="text-white sm:text-[25px] text-[20px] scale-y-0 h-[0px] origin-top duration-300"
+            >
+              <p>
+                Netflix has an extensive library of feature films,
+                documentaries, TV shows, anime, award-winning Netflix originals,
+                and more. Watch as much as you want, anytime you want.
               </p>
             </div>
           </div>
@@ -278,24 +289,6 @@
             <div
               class="p-[20px] text-white sm:text-[30px] text-[20px] relative border-b-[2px] border-[black] hover:bg-[rgb(78,78,78)] duration-300 cursor-pointer faqQuestion"
             >
-              <h3>What can I watch on Netflix?</h3>
-              <span class="absolute right-[20px] top-[15px]">+</span>
-            </div>
-            <div
-              class="text-white sm:text-[25px] text-[20px] scale-y-0 h-[0px] origin-top duration-300"
-            >
-              <p>
-                Netflix has an extensive library of feature films,
-                documentaries, TV shows, anime, award-winning Netflix originals,
-                and more. Watch as much as you want, anytime you want.
-              </p>
-            </div>
-          </div>
-
-          <div class="bg-[#2d2d0d] mb-[15px]">
-            <div
-              class="p-[20px] text-white sm:text-[30px] text-[20px] relative border-b-[2px] border-[black] hover:bg-[rgb(78,78,78)] duration-300 cursor-pointer faqQuestion"
-            >
               <h3>Is Netflix good for kids?</h3>
               <span class="absolute right-[20px] top-[15px]">+</span>
             </div>
@@ -315,27 +308,6 @@
               </p>
             </div>
           </div>
-        </div>
-
-        <p class="text-[17px] text-white text-center">
-          Ready to watch? Enter your email to create or restart your membership.
-        </p>
-        <div class="max-w-[700px] sm:px-10px px-[40px] mx-auto mt-[15px]">
-          <form
-            action=""
-            class="grid gap-[10px] sm:grid-cols-[65%_auto] grid-cols-1"
-          >
-            <input
-              type="email"
-              class="border-[1px] pl-[20px] h-[55px] text-[20px] font-bold border-[#ccc] rounded-[5px] bg-[transparent]"
-              placeholder="Email address"
-            />
-            <button
-              class="bg-red-400 hover:bg-[rgb(193,17,25)] duration-300 px-[10px] text-[27px] h-[55px] p-[5px] font-bold rounded-[5px] text-white"
-            >
-              Get Started
-            </button>
-          </form>
         </div>
       </div>
     </section>
@@ -439,9 +411,12 @@
             </select>
           </div>
           <h3 class="text-[#ccc] pt-[20px]">Netflix India</h3>
+          <p class="text-md text-[#ccc] text-center">
+            © 2024 Netflix Clone. All rights reserved. This is a project for learning
+            purposes only.
+          </p>
         </div>
       </div>
-      oko
     </footer>
   </body>
   <script>
