--- a/index.html
+++ b/index.html
@@ -158,287 +158,24 @@
           <figure class="sm:order-1 order-2">
             <img src="images/feature-4.png" />
           </figure>
-          <div class="text-white pl-[40px] sm:order-2 order-1 py-[30px]">
+          <div class="text-white sm:order-2 order-1 pl-[40px] py-[30px]">
             <h2 class="sm:text-[45px] text-[35px] font-bold">
               Create profiles for kids
             </h2>
             <p class="sm:text-[25px] text-[20px] pt-[30px]">
-              Send children on adventures with their favourite characters in a
-              space made just for them-free with your membership.
+              Send kids on adventures with their favourite characters in a space
+              made just for them—free with your membership.
             </p>
           </div>
         </div>
       </div>
     </section>
 
-    <section
-      class="w-[100%] border-t-[8px] border-t-[#605d5d] bg-slate-800 sm:py-[100px] py-[50px]"
-    >
-      <div class="max-w-[1170px] mx-auto px-[15px]">
-        <h2 class="sm:text-[45px] text-[35px] font-bold text-white text-center">
-          Frequently Asked Questions
-        </h2>
-        <div class="py-[30px]">
-          <div class="bg-[#2d2d0d] mb-[15px]">
-            <div
-              class="p-[20px] text-white sm:text-[30px] text-[20px] relative border-b-[2px] border-[black] hover:bg-[rgb(78,78,78)] duration-300 cursor-pointer faqQuestion"
-            >
-              <h3>What is Netflix?</h3>
-              <span class="absolute right-[20px] top-[15px]">+</span>
-            </div>
-            <div
-              class="text-white sm:text-[25px] text-[20px] scale-y-0 h-[0px] origin-top duration-300"
-            >
-              <p>
-                Netflix is a streaming service that offers a wide variety of
-                award-winning TV shows, movies, anime, documentaries and more –
-                on thousands of internet-connected devices.
-              </p>
-              <br />
-              <p>
-                You can watch as much as you want, whenever you want, without a
-                single ad – all for one low monthly price. There's always
-                something new to discover, and new TV shows and movies are added
-                every week!
-              </p>
-            </div>
-          </div>
-
-          <div class="bg-[#2d2d0d] mb-[15px]">
-            <div
-              class="p-[20px] text-white sm:text-[30px] text-[20px] relative border-b-[2px] border-[black] hover:bg-[rgb(78,78,78)] duration-300 cursor-pointer faqQuestion"
-            >
-              <h3>Where can I Watch?</h3>
-              <span class="absolute right-[20px] top-[15px]">+</span>
-            </div>
-            <div
-              class="text-white sm:text-[25px] text-[20px] scale-y-0 h-[0px] origin-top duration-300"
-            >
-              <p>
-                Watch anywhere, anytime. Sign in with your Netflix account to
-                watch instantly on the web at netflix.com from your personal
-                computer or on any internet-connected device that offers the
-                Netflix app, including smart TVs, smartphones, tablets,
-                streaming media players and game consoles.
-              </p>
-              <br />
-              <p>
-                You can also download your favourite shows with the iOS,
-                Android, or Windows 10 app. Use downloads to watch while you're
-                on the go and without an internet connection. Take Netflix with
-                you anywhere.
-              </p>
-            </div>
-          </div>
-          <div class="bg-[#2d2d0d] mb-[15px]">
-            <div
-              class="p-[20px] text-white sm:text-[30px] text-[20px] relative border-b-[2px] border-[black] hover:bg-[rgb(78,78,78)] duration-300 cursor-pointer faqQuestion"
-            >
-              <h3>How much does Netflix cost?</h3>
-              <span class="absolute right-[20px] top-[15px]">+</span>
-            </div>
-            <div
-              class="text-white sm:text-[25px] text-[20px] scale-y-0 h-[0px] origin-top duration-300"
-            >
-              <p>
-                Watch Netflix on your smartphone, tablet, Smart TV, laptop, or
-                streaming device, all for one fixed monthly fee. Plans range
-                from ₹649 to ₹149 a month. No extra costs, no contracts.
-              </p>
-            </div>
-          </div>
-
-          <div class="bg-[#2d2d0d] mb-[15px]">
-            <div
-              class="p-[20px] text-white sm:text-[30px] text-[20px] relative border-b-[2px] border-[black] hover:bg-[rgb(78,78,78)] duration-300 cursor-pointer faqQuestion"
-            >
-              <h3>What can I watch on Netflix?</h3>
-              <span class="absolute right-[20px] top-[15px]">+</span>
-            </div>
-            <div
-              class="text-white sm:text-[25px] text-[20px] scale-y-0 h-[0px] origin-top duration-300"
-            >
-              <p>
-                Netflix has an extensive library of feature films,
-                documentaries, TV shows, anime, award-winning Netflix originals,
-                and more. Watch as much as you want, anytime you want.
-              </p>
-            </div>
-          </div>
-
-          <div class="bg-[#2d2d0d] mb-[15px]">
-            <div
-              class="p-[20px] text-white sm:text-[30px] text-[20px] relative border-b-[2px] border-[black] hover:bg-[rgb(78,78,78)] duration-300 cursor-pointer faqQuestion"
-            >
-              <h3>How do I cancel?</h3>
-              <span class="absolute right-[20px] top-[15px]">+</span>
-            </div>
-            <div
-              class="text-white sm:text-[25px] text-[20px] scale-y-0 h-[0px] origin-top duration-300"
-            >
-              <p>
-                Netflix is flexible. There are no annoying contracts and no
-                commitments. You can easily cancel your account online in two
-                clicks. There are no cancellation fees – start or stop your
-                account anytime.
-              </p>
-            </div>
-          </div>
-
-          <div class="bg-[#2d2d0d] mb-[15px]">
-            <div
-              class="p-[20px] text-white sm:text-[30px] text-[20px] relative border-b-[2px] border-[black] hover:bg-[rgb(78,78,78)] duration-300 cursor-pointer faqQuestion"
-            >
-              <h3>Is Netflix good for kids?</h3>
-              <span class="absolute right-[20px] top-[15px]">+</span>
-            </div>
-            <div
-              class="text-white sm:text-[25px] text-[20px] scale-y-0 h-[0px] origin-top duration-300"
-            >
-              <p>
-                The Netflix Kids experience is included in your membership to
-                give parents control while kids enjoy family-friendly TV shows
-                and films in their own space.
-              </p>
-              <br />
-              <p>
-                Kids profiles come with PIN-protected parental controls that let
-                you restrict the maturity rating of content kids can watch and
-                block specific titles you don’t want kids to see.
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <footer
-      class="w-[100%] border-t-[8px] border-t-[#605d5d] bg-slate-800 sm:py-[100px] py-[50px] sm:pl-[0px] pl-[20px]"
-    >
-      <div class="max-w-[1170px] mx-auto px-[15px]">
-        <h3 class="text-[#ccc] text-[20px]">
-          Questions? Call
-          <a class="underline" href="tel:000-800-919-1694">000-800-919-1694</a>
-        </h3>
-        <div class="py-[40px] grid sm:grid-cols-4 grid-cols-1">
-          <div>
-            <ul class="text-[#ccc]">
-              <li class="mb-[10px]"><a class="underline" href="#">Faq</a></li>
-              <li class="mb-[10px]">
-                <a class="underline" href="#">Investor Relations</a>
-              </li>
-              <li class="mb-[10px]">
-                <a class="underline" href="#">Privacy</a>
-              </li>
-              <li class="mb-[10px]">
-                <a class="underline" href="#">Speed Test</a>
-              </li>
-            </ul>
-          </div>
-
-          <div>
-            <ul class="text-[#ccc]">
-              <li class="mb-[10px]">
-                <a class="underline" href="#">Help Centre</a>
-              </li>
-              <li class="mb-[10px]"><a class="underline" href="#">Jobs</a></li>
-              <li class="mb-[10px]">
-                <a class="underline" href="#">Cookie Preferences</a>
-              </li>
-              <li class="mb-[10px]">
-                <a class="underline" href="#">Legal Notices</a>
-              </li>
-            </ul>
-          </div>
-
-          <div>
-            <ul class="text-[#ccc]">
-              <li class="mb-[10px]">
-                <a class="underline" href="#">Account</a>
-              </li>
-              <li class="mb-[10px]">
-                <a class="underline" href="#">Ways to Watch</a>
-              </li>
-              <li class="mb-[10px]">
-                <a class="underline" href="#">Corporate Information</a>
-              </li>
-              <li class="mb-[10px]">
-                <a class="underline" href="#">Only on Netflix</a>
-              </li>
-            </ul>
-          </div>
-
-          <div>
-            <ul class="text-[#ccc]">
-              <li class="mb-[10px]">
-                <a class="underline" href="#">Media Centre</a>
-              </li>
-              <li class="mb-[10px]">
-                <a class="underline" href="#">Terms of Use</a>
-              </li>
-              <li class="mb-[10px]">
-                <a class="underline" href="#">Contact Us</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div>
-          <div class="relative">
-            <svg
-              class="text-white absolute top-[10px] left-[7px]"
-              width="16"
-              height="16"
-              viewBox="0 0 16 16"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-              class="default-ltr-cache-4z3qvp e1svuwfo1"
-              data-name="Languages"
-              aria-labelledby=":R135dajalalal9:"
-              aria-hidden="true"
-            >
-              <path
-                fill-rule="evenodd"
-                clip-rule="evenodd"
-                d="M10.7668 5.33333L10.5038 5.99715L9.33974 8.9355L8.76866 10.377L7.33333 14H9.10751L9.83505 12.0326H13.4217L14.162 14H16L12.5665 5.33333H10.8278H10.7668ZM10.6186 9.93479L10.3839 10.5632H11.1036H12.8856L11.6348 7.2136L10.6186 9.93479ZM9.52722 4.84224C9.55393 4.77481 9.58574 4.71045 9.62211 4.64954H6.41909V2H4.926V4.64954H0.540802V5.99715H4.31466C3.35062 7.79015 1.75173 9.51463 0 10.4283C0.329184 10.7138 0.811203 11.2391 1.04633 11.5931C2.55118 10.6795 3.90318 9.22912 4.926 7.57316V12.6667H6.41909V7.51606C6.81951 8.15256 7.26748 8.76169 7.7521 9.32292L8.31996 7.88955C7.80191 7.29052 7.34631 6.64699 6.9834 5.99715H9.06968L9.52722 4.84224Z"
-                fill="currentColor"
-              ></path>
-            </svg>
-            <select
-              class="bg-[black] text-white border-[0.1px] sm:p-[5px_25px] p-[5px_20px] rounded-[5px]"
-            >
-              <option value="">English</option>
-              <option value="">Hindi</option>
-            </select>
-          </div>
-          <h3 class="text-[#ccc] pt-[20px]">Netflix India</h3>
-          <p class="text-md text-[#ccc] text-center">
-            © 2024 Netflix Clone. All rights reserved. This is a project for learning
-            purposes only.
-          </p>
-        </div>
-      </div>
+    <footer class="bg-black text-white py-4 text-center">
+      <p class="text-sm">
+        © 2024 Netflix Clone. All rights reserved. This is a project for learning
+        purposes only.
+      </p>
     </footer>
   </body>
-  <script>
-    let allquestion = document.querySelectorAll(".faqQuestion");
-    allquestion.forEach((v, index) => {
-      v.addEventListener("click", () => {
-        v.nextElementSibling.classList.toggle("h-[auto]");
-        v.nextElementSibling.classList.toggle("scale-y-100");
-        v.nextElementSibling.classList.toggle("p-[20px]");
-        v.children[1].classList.toggle("rotate-45");
-
-        allquestion.forEach((el, i) => {
-          if (i != index) {
-            el.nextElementSibling.classList.remove(
-              "h-[auto]",
-              "scale-y-100",
-              "p-[20px]"
-            );
-            el.children[1].classList.remove("rotate-45");
-          }
-        });
-      });
-    });
-  </script>
 </html>
